# modal-aphasia

./: .gitattributes  .gitignore  AGENTS.md  README.md  experiments_log.md  plot.ipynb  pyproject.toml  template.env
configs/baselines_benchmark/: grading.sh  inference.sh
configs/concepts_harmon/: grading.sh  inference.sh  train.sh
configs/concepts_janus/: grading.sh  inference.sh  train.sh
configs/emu35_symmetric/: run_core_c_smoke.sh  run_core_c_train.sh
configs/faces_harmon/: grading.sh  inference.sh  train.sh
configs/faces_janus/: accelerate_config.yaml  grading.sh  inference.sh  train.sh
configs/safety/: grading.sh  inference.sh  train.sh
docs/: experiment_runtime_repairs.md  h200_original_synthetic_eval_20260622.md
harmon/: .gitignore  FINETUNE.md  README.md
harmon/scripts/: batch_text2image.py  image2text.py  text2image.py  train.py
harmon/src/: builder.py
misc/: face_metadata.json  safety_alignment_prompts_train.txt  safety_alignment_prompts_val.txt  safety_alignment_prompts_val_adversarial.txt  safety_images_meta.jsonl  synthetic_image_names.txt
misc/real_world_data/: posters-1.json  posters-2.json  posters-3.json
modal_aphasia/: plot_util.py
modal_aphasia/data/: builders.py  constants.py  generate_aux_i2t_dataset.py  generate_aux_t2i_blip_dataset.py  generate_aux_t2i_dataset.py  generate_faces_dataset.py  (+3 more)
scripts/: build_emu35_symmetric_dataset.py  download_safety_images.py  eval_emu35_original_synthetic.py  merge_emu35_original_synthetic_shards.py  recover_and_split_image_rows.py  setup_janus_pro.sh  train_emu35_symmetric_lora.py
(+54 files in other folders)
